[package]
name    = "rustjs"
version = "0.1.0"
license = "MIT"
authors = ["Yorkie Liu <yorkiefixer@gmail.com>"]
build   = "src/build.rs"

[lib]
name = "rustjs"
path = "src/lib.rs"

[dependencies]
rustc-serialize = "0.3"
env_logger = "0.3.0"
libc = "0.1.7"
clap = "*"
futures = "0.1.6"
tokio-core = "*"

[[bin]]
name = "rustjs"
test = false
doc = false
